--- a/index.html
+++ b/index.html
@@ -1,3 +1,21 @@
+<!doctype html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Test for Voki Games</title>
+    <style type="text/css">
+        body {
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
+
+    </style>
+</head>
+<script src="pixi/pixi.js"></script>
 <body>
-<div>Hello world!...</div>
+
+<script type="text/javascript" src="script.js"></script>
+
 </body>
+</html>
